# mobile-throwing

./: Dockerfile  README.md  build-docker.sh  demo_mobile_manipulator_throw.py  requirements.txt  run-docker.sh
descriptions/rbkairos_description/: CMakeLists.txt  package.xml
descriptions/rbkairos_description/launch/: rbkairos.launch  rbkairos_state_robot.launch
descriptions/rbkairos_description/meshes/structures/: extension_ur16e.stl
descriptions/rbkairos_description/robots/: rbkairos_base.urdf  rbkairos_base.urdf.xacro  rbkairos_extension_ur16.urdf.xacro  rbkairos_iiwa_plus.urdf.xacro  rbkairos_panda.urdf  rbkairos_panda.urdf.xacro  rbkairos_panda_hand.urdf  rbkairos_panda_new.urdf  rbkairos_ur10.urdf.xacro  rbkairos_ur10e_plus.urdf.xacro  rbkairos_ur5.urdf.xacro  rbkairos_ur5e_plus.urdf.xacro
descriptions/rbkairos_description/robots/versions/: rbkairos_ur10_vgc10.urdf.xacro  rbkairos_ur10_wsg50.urdf.xacro  rbkairos_ur5_egh.urdf.xacro  rbkairos_ur5_plus.urdf.xacro  rbkairos_ur5_plus_vgc10.urdf.xacro  rbkairos_ur5_wsg50.urdf.xacro  rbkairos_ur5_wsg50_base.urdf.xacro
descriptions/rbkairos_description/rviz/: config.rviz
descriptions/rbkairos_description/urdf/: inertia.urdf.xacro
descriptions/rbkairos_description/urdf/bases/: rbkairos_base.urdf.xacro  rbkairos_base_frame.urdf.xacro
descriptions/rbkairos_description/urdf/box/: box.launch  box.sdf  box.urdf.xacro  holder.launch  holder.urdf.xacro
descriptions/rbkairos_description/urdf/structures/: arm_pedestal.urdf.xacro  extension_ur16e.urdf.xacro  realsense2vgc10_support.urdf.xacro  realsense_wrist_support.urdf.xacro  ur_arm_base.urdf.xacro  vgc10.gazebo.xacro  vgc10.urdf.xacro  wsg_50_support.urdf.xacro
descriptions/robot_descriptions/objects_description/: CMakeLists.txt  README.md  package.xml
descriptions/robot_descriptions/objects_description/objects/: box.urdf  box.urdf.xacro  box.xacro  soccerball.urdf  soccerball.urdf.xacro  soccerball.xacro  table.urdf  table.urdf.xacro  table.xacro
(+75 files in other folders)
